Run Jetty 12, but hello.xml is still faulty