@@ -1,7 +1,7 @@
 #!/bin/sh
 
 # Run once on Mac/Linux (without proxy-protocol,gzip):
-# java -jar jetty-home-12.0.14/start.jar jetty.home=..\jetty-home-12.0.14 jetty.base=jetty.base --add-module=http,webapp,deploy,resources,websocket
+# java -jar ../jetty-home-12.0.14/start.jar jetty.home=../jetty-home-12.0.14 jetty.base=jetty.base --add-modules=server,http,ee10-deploy
 
 SCRIPT_DIR=`dirname $0`
 
